@@ -1,3 +1,8 @@
+2010-07-11  Magnus Henoch  <magnus.henoch@gmail.com>
+
+	* tramp-gvfs.el (tramp-gvfs-handle-copy-file): Do not pass empty
+	argument to gvfs-copy.
+
 2010-06-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-remote-process-environment): Protect version
